visibility-settings-fix

--- a/social/static/css/yourbit_core.css
+++ b/social/static/css/yourbit_core.css
@@ -950,7 +950,6 @@ only be used for object transforms (shaping and scaling)
     }
 
     #visibility-dropdown-mobile {
-        display:block;
         position: absolute;
         color: white;
         font-family: Arial, Helvetica, sans-serif;
